--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=neohub
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+spring.jpa.hibernate.ddl-auto=none
