--- a/neohub/pom.xml
+++ b/neohub/pom.xml
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>19</java.version>
 		<kotlin.version>2.0.21</kotlin.version>
 	</properties>
 	<dependencies>
@@ -89,7 +89,19 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>
+
+		<!-- Spring Boot WebSockets -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
+
+		<!-- Spring Messaging -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-messaging</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<sourceDirectory>src/main/kotlin</sourceDirectory>
@@ -133,7 +145,7 @@
 						<option>all-open:annotation=jakarta.persistence.MappedSuperclass</option>
 						<option>all-open:annotation=jakarta.persistence.Embeddable</option>
 					</pluginOptions>
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>19</jvmTarget>
                 </configuration>
 				<dependencies>
 					<dependency>
