Actualizo .gitignore y limpio el repo

--- a/neohub/.gitignore
+++ b/neohub/.gitignore
@@ -1,15 +1,26 @@
+### General ###
 HELP.md
+*.log
+*.tmp
+*.temp
+*.bak
+*.swp
+.DS_Store
+Thumbs.db
+
+### Maven ###
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-
-# Directorios generados por MQTT client
+### MQTT ###
 paho*
+__pycache__/
+*.pyc
 
-
-### STS ###
+### IDEs ###
+# STS
 .apt_generated
 .classpath
 .factorypath
@@ -18,13 +29,15 @@ paho*
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-.idea
+# IntelliJ
+.idea/
 *.iws
 *.iml
 *.ipr
+*.ids
+*.orig
 
-### NetBeans ###
+# NetBeans
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -34,5 +47,27 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+# VS Code
 .vscode/
+
+### Java ###
+*.class
+*.war
+*.ear
+*.jar
+
+### Node.js ###
+node_modules/
+npm-debug.log
+yarn-error.log
+.next/
+out/
+
+### React ###
+.eslintcache
+.env.local
+.env.development
+.env.test
+.env.production
+.cache/
+dist/
