--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=neohub
 
-spring.datasource.url=jdbc:mysql://localhost:3306/neohub_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/neohub_db?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=neohub_db
 spring.datasource.password=neo_hub
 
