--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -4,10 +4,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/neohub_db?allowPublicKeyRetrie
 spring.datasource.username=neohub_db
 spring.datasource.password=neo_hub
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
+#(update)
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
+
 
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
