Al fin hice andar los test, aaaaa

--- a/neohub/pom.xml
+++ b/neohub/pom.xml
@@ -89,6 +89,12 @@
             <version>${kotlin.version}</version>
             <scope>test</scope>
         </dependency>
+		<dependency>
+			<groupId>io.mockk</groupId>
+			<artifactId>mockk-jvm</artifactId>
+			<version>1.13.10</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- Spring Boot WebSockets -->
 		<dependency>
