--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -1,18 +1,20 @@
 spring.application.name=neohub
 
+# application.properties
+# Configuración predeterminada
 spring.datasource.url=jdbc:mysql://localhost:3306/neohub_db?allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=neohub_db
 spring.datasource.password=neo_hub
 
-spring.jpa.hibernate.ddl-auto=create-drop
-#(update)
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=true
 
-
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
+
+
 
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework=DEBUG
