--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -15,6 +15,9 @@ spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
 
 
+logging.level.org.springframework.web.socket=DEBUG
+logging.level.org.springframework.web.socket.handler=DEBUG
+logging.level.org.springframework.web.socket.client=DEBUG
 
 #logging.level.org.springframework.security=DEBUG
 #logging.level.org.springframework=DEBUG
