--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -7,9 +7,9 @@ spring.datasource.username=neohub_db
 spring.datasource.password=neo_hub
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=false
 
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.maximum-pool-size=5
