--- a/neohub/pom.xml
+++ b/neohub/pom.xml
@@ -30,6 +30,7 @@
 		<java.version>19</java.version>
 		<kotlin.version>2.0.21</kotlin.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -149,6 +150,20 @@
 			<artifactId>h2</artifactId>
 		</dependency>
 
+		<!-- Push notifications -->
+
+
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.70</version>
+		</dependency>
+
+		<dependency>
+			<groupId>nl.martijndwars</groupId>
+			<artifactId>web-push</artifactId>
+			<version>5.1.1</version>
+		</dependency>
 
 	</dependencies>
 
