--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "axios": "^1.8.4",
+    "jsdom": "^26.1.0",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^6.30.0"
+    "react-router-dom": "^6.30.0",
+    "vitest": "^3.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
