--- a/neohub/src/main/resources/application-test.properties
+++ b/neohub/src/main/resources/application-test.properties
@@ -5,3 +5,5 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+jwt.secret=G2p5Vz4q6/TJfh+59pVR4P8WQb+GUJjQ8LZWzEx6xE4=G2p5Vz4q6/TJfh+59pVR4P8WQb+GUJjQ8LZWzEx6xE4=
+# Este secret es para los test unicamente, es falopa.
