--- a/neohub/src/main/resources/application.properties
+++ b/neohub/src/main/resources/application.properties
@@ -27,3 +27,6 @@ logging.level.org.springframework.web.socket.client=DEBUG
 
 jwt.secret=${JWT_SECRET}
 
+vapid.public.key=${VAPID_PUBLIC_KEY}
+vapid.private.key=${VAPID_PRIVATE_KEY}
+mqtt.broker.url=${MQTT_BROKER_URL}
